--- a/machine learning/01.Decision Tree - Iris Classification.ipynb
+++ b/machine learning/01.Decision Tree - Iris Classification.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        " 'data_module': 'sklearn.datasets.data'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "150"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,18 +359,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    50\n",
-      "1    50\n",
-      "2    50\n",
-      "Name: count, dtype: int64\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0    50\n",
+       "1    50\n",
+       "2    50\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +543,7 @@
        "       [5.9, 3. , 5.1, 1.8]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +684,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +852,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -969,16 +972,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x16c1c0dc0>"
+       "<seaborn.axisgrid.PairGrid at 0x1479a2220>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -999,16 +1002,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x16cb3c9a0>"
+       "<seaborn.axisgrid.PairGrid at 0x150c13070>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1031,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1043,7 @@
        "<Axes: xlabel='petal length (cm)', ylabel='petal width (cm)'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1065,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1223,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1270,7 @@
        "0.954434002924965"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1294,7 @@
        "0.7489992230622807"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1317,7 @@
        "0.46875"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1339,7 @@
        "0.34375"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1510,7 @@
        "       [5.1, 1.8]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1518,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1533,7 @@
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1562,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1586,7 @@
        "0.9933333333333333"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1618,17 +1621,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting mlxtend\n",
-      "  Downloading mlxtend-0.23.3-py3-none-any.whl.metadata (7.3 kB)\n",
+      "Requirement already satisfied: mlxtend in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (0.23.3)\n",
       "Requirement already satisfied: scipy>=1.2.1 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from mlxtend) (1.10.1)\n",
-      "Requirement already satisfied: numpy>=1.16.2 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from mlxtend) (1.24.4)\n",
+      "Requirement already satisfied: numpy>=1.16.2 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from mlxtend) (1.23.5)\n",
       "Requirement already satisfied: pandas>=0.24.2 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from mlxtend) (2.0.3)\n",
       "Requirement already satisfied: scikit-learn>=1.3.1 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from mlxtend) (1.3.2)\n",
       "Requirement already satisfied: matplotlib>=3.0.0 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from mlxtend) (3.7.3)\n",
@@ -1638,7 +1640,7 @@
       "Requirement already satisfied: fonttools>=4.22.0 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend) (4.53.1)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend) (1.4.5)\n",
       "Requirement already satisfied: packaging>=20.0 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend) (24.1)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend) (10.4.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend) (8.2.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend) (3.1.4)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend) (2.9.0)\n",
       "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend) (6.4.5)\n",
@@ -1646,11 +1648,7 @@
       "Requirement already satisfied: tzdata>=2022.1 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from pandas>=0.24.2->mlxtend) (2024.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from scikit-learn>=1.3.1->mlxtend) (3.5.0)\n",
       "Requirement already satisfied: zipp>=3.1.0 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from importlib-resources>=3.2.0->matplotlib>=3.0.0->mlxtend) (3.20.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib>=3.0.0->mlxtend) (1.16.0)\n",
-      "Downloading mlxtend-0.23.3-py3-none-any.whl (1.4 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m33.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: mlxtend\n",
-      "Successfully installed mlxtend-0.23.3\n"
+      "Requirement already satisfied: six>=1.5 in /Users/taeheon/miniforge3/envs/eda_study/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib>=3.0.0->mlxtend) (1.16.0)\n"
      ]
     }
    ],
@@ -1660,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1700,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1707,7 @@
        "((120, 2), (30, 2))"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1720,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1727,7 @@
        "(array([0, 1, 2]), array([ 9,  8, 13]))"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1756,7 +1754,7 @@
        "(array([0, 1, 2]), array([10, 10, 10]))"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1783,7 @@
        "       2, 1, 2, 0, 2, 0, 2, 1])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1806,7 @@
        "DecisionTreeClassifier(max_depth=2, random_state=13)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1823,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1854,7 @@
        "0.9533333333333334"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1869,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1891,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1898,7 @@
        "0.9666666666666667"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1945,7 @@
        "DecisionTreeClassifier(max_depth=2, random_state=13)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1966,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1976,7 @@
        " 'petal width (cm)']"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1989,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2010,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2017,7 @@
        "array([1])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2041,7 +2039,7 @@
        "array([[0.        , 0.97142857, 0.02857143]])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2061,7 +2059,7 @@
        "array([0.        , 0.        , 0.43271373, 0.56728627])"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2072,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2079,7 @@
        "('a', 'b', 'c')"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2096,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2103,7 @@
        "(1, 2, 3)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2138,7 +2136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
